# charizhard

./: .gitattributes  .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  partitions.csv  rustfmt.toml  sdkconfig
.cargo/: config.toml
.github/workflows/: rust.yml
src/: .env  bridge.rs  env.rs  env_vars.rs  http.rs  main.rs  redirection.rs  wifi.rs  wifi_ids.rs
src/bridge/: bridge.rs  logic.rs  mod.rs  state.rs
src/env/: .env  heapless.rs  mod.rs
src/http/: assets_routes.rs  html.rs  index.css  index.js  index.rs  mod.rs  wg_routes.rs  wifi_routes.rs
src/http/static/: index.css  index.js
src/net/: eth.rs  mod.rs  wifi.rs
src/network/: bridge.rs  eth.rs  mod.rs  wifi.rs
src/ota/: mod.rs
src/utils/: .env  heapless.rs  mod.rs  nvs.rs
src/wifi/: mod.rs
src/wireguard/: bindings.h  context.rs  ctx.rs  mod.rs  tunnel.rs
src/wireguard/esp_wireguard/esp_wireguard/include/: esp_wireguard.h
src/wireguard/esp_wireguard/esp_wireguard/src/: esp_wireguard.c  wireguardif.c
src/wireguard/esp_wireguard/src/: esp_wireguard.c  wireguardif.c
