[package]
name = "charizhard"
version = "0.1.0"
authors = ["_index indexd@pm.me"]
edition = "2021"
resolver = "2"
rust-version = "1.81"

[[bin]]
name = "charizhard"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.4" }

[dependencies]
log = { version = "0.4.22", default-features = false }
esp-idf-svc = { version = "0.49.1", default-features = false, features = ["alloc", "std"] }
esp-idf-hal = "0.44.1"
embedded-hal = "1.0.0"
embedded-svc = "0.28.0"
heapless = "0.8.0"
anyhow = { version = "1.0.93", default-features = false }
base64 = "0.22.1"
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_urlencoded = "0.7.1"
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
once_cell = "1.20.2"

chacha20 = { version = "0.9.1", default-features = false }
poly1305 = { version = "0.8.0", default-features = false }
blake2s_simd = { version = "1.0.2", default-features = false}
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["rand_core"] }

rand_core = "0.6.4"
getrandom = "0.2.15"
generic-array = "1.1.0" 
hmac ="0.12.1"
sha2="0.10.8"
hex = "0.4.3"

[build-dependencies]
embuild = "0.32.0"