[package]
name = "charizhard"
version = "0.1.0"
authors = ["_index indexd@pm.me"]
edition = "2021"
resolver = "2"
rust-version = "1.81"

[[bin]]
name = "charizhard"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
esp-idf-svc = { git = "https://github.com/indexds/esp-idf-svc" }

[features]
default = ["std", "embassy", "esp-idf-svc/native", "wireguard"]

mdns_ipv6 = []
wireguard = []

std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.4.2" }

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "trombik/esp_wireguard", version = "0.9" }
bindings_header = "src/wireguard/bindings.h"
bindings_module = "wg"

[package.metadata.esp-idf-sys]
esp_idf_sdkconfig="sdkconfig"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false, features = ["alloc", "std"] }
esp-idf-hal = { version = "0.44" }
embedded-hal = "1.0"
embedded-svc = "0.28"
heapless = { version = "0.8", default-features = false }
anyhow = { version = "1.0", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_urlencoded = { version = "0.7", default-features = false }
strum = { version = "0.26", default-features = false, features = ["derive"] }
once_cell = { version = "1.20", default-features = false, features = ["std"] }

[build-dependencies]
embuild = "0.32"