[package]
name = "charizhard"
version = "0.1.0"
authors = ["indexds https://github.com/indexds"]
edition = "2021"
resolver = "2"
rust-version = "1.81"
readme = "README.md"
description = "A cutting-edge hardware solution designed to secure data exchanges and protect devices from hardware-based threats."
repository = "https://github.com/indexds/charizhard"
license-file = "LICENSE"
keywords = ["vpn", "wireguard", "wg", "esp32"]
categories = ["embedded"]
exclude = ["/.github", "/logo", "/schematic"]

[[bin]]
name = "charizhard"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "z"
strip = true # Automatically strip symbols from the binary.
lto = true # This can, for example, remove dead code and often times reduces binary size
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
esp-idf-svc = { git = "https://github.com/indexds/esp-idf-svc", branch = "get_ip" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys", branch = "master" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal", branch = "master" }
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal", branch = "master" }
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc", branch = "master" }
embuild = { git = "https://github.com/esp-rs/embuild", branch = "master" }

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.4.2" }

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "src/wireguard/esp_wireguard"
bindings_header = "src/wireguard/bindings.h"
bindings_module = "wg"

[package.metadata.esp-idf-sys]
esp_idf_sdkconfig="sdkconfig"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false, features = ["std"] }
embedded-svc = { version = "0.28", default-features = true }
heapless = { version = "0.8", default-features = false }
anyhow = { version = "1.0", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_urlencoded = { version = "0.7", default-features = false }
lazy_static = { version = "1.5", default-features = false }

[build-dependencies]
embuild = "0.32"